# cointrading

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: cointrading-consecutive-bar-alert.service  cointrading-consecutive-bar-alert.timer  cointrading-dashboard.service  cointrading-funding-engine.service  cointrading-funding-engine.timer  cointrading-grid-engine.service  cointrading-grid-engine.timer  cointrading-grid-paper.service  cointrading-grid-paper.timer  cointrading-live-supervisor-notify.service  cointrading-live-supervisor-notify.timer  cointrading-llm-report.service  cointrading-llm-report.timer  cointrading-market-context.service  cointrading-market-context.timer  cointrading-market-regime.service  cointrading-market-regime.timer  cointrading-meta-backtest-notify.service  cointrading-meta-backtest-notify.timer  cointrading-micro-grid-paper.service  cointrading-micro-grid-paper.timer  cointrading-orderflow-guard.service  cointrading-ratio-capture.service  cointrading-ratio-capture.timer  cointrading-refine-entry-notify.service  cointrading-refine-entry-notify.timer  cointrading-scalp-collect.service  cointrading-scalp-collect.timer  cointrading-scalp-engine.service  cointrading-scalp-engine.timer  cointrading-scalp-score.service  cointrading-scalp-score.timer  cointrading-strategy-engine.service  cointrading-strategy-engine.timer  cointrading-strategy-evaluate.service  cointrading-strategy-evaluate.timer  cointrading-strategy-notify.service  cointrading-strategy-notify.timer  cointrading-tactical-live.service  cointrading-tactical-live.timer  (+13 more)
(+130 files in other folders)
